Refacotr js functions

--- a/LAB-01/index.html
+++ b/LAB-01/index.html
@@ -8,24 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <input placeholder="Enter some text" name="name" />
-    <p id="log"></p>
-
     <form class="calculator">
-        <input type="text" id="field1">
-        <input type="text" id="field2">
-        <input type="text" id="field3">
-        <input type="text" id="field4">    
+        <input type="text" class="field1">
+        <input type="text" class="field2">
+        <input type="text" class="field3">
+        <input type="text" class="field4">    
     </form>
 
-    <button id = "calculate">Przelicz</button>
+    <button class="calculate">Przelicz</button>
 
     <div class="score">
-        Sum: <span id ="sum"></span><br>
-        Avg: <span id ="avg"></span><br>
-        Min: <span id ="min"></span><br>
-        Max: <span id ="max"></span><br>
+        Sum: <span class ="sum"></span><br>
+        Avg: <span class ="avg"></span><br>
+        Min: <span class ="min"></span><br>
+        Max: <span class ="max"></span><br>
     </div>
 
     <script type="application/javascript" src="script.js"></script>
