--- a/LAB-01/index.html
+++ b/LAB-01/index.html
@@ -20,17 +20,13 @@
     </form>
 
     <div class="score">
-       <label for="sum">Sum:</label>
-       <span class ="sum"></span>
+       <label for="sum">Sum:<span class ="sum"></span></label>
 
-       <label for="avg">Avg:        
-       </label><span class ="avg"></span>
+       <label for="avg">Avg:<span class ="avg"></span></label>
 
-       <label for="min">Min:</label>
-       <span class ="min"></span>
+       <label for="min">Min:<span class ="min"></span></label>
 
-       <label for="max">Max:
-       </label><span class ="max"></span>
+       <label for="max">Max:<span class ="max"></span></label>
     </div>  
         
     <script type="application/javascript" src="script.js"></script>
