Create button and simple function to create new input

--- a/LAB-01/index.html
+++ b/LAB-01/index.html
@@ -13,10 +13,10 @@
             <input type="text" class="field1">
             <input type="text" class="field2">
             <input type="text" class="field3">
-            <input type="text" class="field4">
         </div>
 
         <!-- <button class="calculate">Przelicz</button> -->
+        <button class="addField">Dodaj</button>
     </form>
 
     <div class="score">
