--- a/LAB-03/index.html
+++ b/LAB-03/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <audio src=""></audio>
+    <audio src=""></audio>
+    <audio src=""></audio>
     <script src="script.js"></script>
 </body>
 </html>
