--- a/LAB-03/index.html
+++ b/LAB-03/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio src=""></audio>
-    <audio src=""></audio>
-    <audio src=""></audio>
+    <audio src="./sounds/clap.wav" controls id = "clap"></audio>
+    <audio src="./sounds/boom.wav" controls id = "boom"></audio>
+    <audio src="./sounds/hihat.wav" controls id = "hihat"></audio>
+    <audio src="./sounds/kick.wav" controls id = "kick"></audio>
+    <audio src="./sounds/openhat.wav" controls id ="openhat"></audio>
+    <audio src="./sounds/ride.wav" controls id = "ride"></audio>
+    <audio src="./sounds/snare.wav" controls id = "snare"></audio>
+    <audio src="./sounds/tink.wav" controls id = tink></audio>
+    <audio src="./sounds/tom.wav" controls id = "tom"></audio>
     <script src="script.js"></script>
 </body>
 </html>
