Add styles for drumkit, Bind upper cases in script

--- a/LAB-03/index.html
+++ b/LAB-03/index.html
@@ -7,15 +7,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio src="./sounds/clap.wav" controls id = "clap"></audio>
-    <audio src="./sounds/boom.wav" controls id = "boom"></audio>
-    <audio src="./sounds/hihat.wav" controls id = "hihat"></audio>
-    <audio src="./sounds/kick.wav" controls id = "kick"></audio>
-    <audio src="./sounds/openhat.wav" controls id ="openhat"></audio>
-    <audio src="./sounds/ride.wav" controls id = "ride"></audio>
-    <audio src="./sounds/snare.wav" controls id = "snare"></audio>
-    <audio src="./sounds/tink.wav" controls id = tink></audio>
-    <audio src="./sounds/tom.wav" controls id = "tom"></audio>
-    <script src="script.js"></script>
+    <div class="container">
+        <audio src="./sounds/clap.wav" controls id = "clap"></audio>
+        <audio src="./sounds/boom.wav" controls id = "boom"></audio>
+        <audio src="./sounds/hihat.wav" controls id = "hihat"></audio>
+        <audio src="./sounds/kick.wav" controls id = "kick"></audio>
+        <audio src="./sounds/openhat.wav" controls id ="openhat"></audio>
+        <audio src="./sounds/ride.wav" controls id = "ride"></audio>
+        <audio src="./sounds/snare.wav" controls id = "snare"></audio>
+        <audio src="./sounds/tink.wav" controls id = tink></audio>
+        <audio src="./sounds/tom.wav" controls id = "tom"></audio>
+        <script src="script.js"></script>
+    
+        <div class="drumkit">
+            <h1>Drumkit</h1>
+            <div class="chanel1">
+                <h2>Chanel-1</h2>
+                <div class="icons">       
+                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
+                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                </div>  
+            </div>
+            <div class="chanel2">
+                <h2>Chanel-2</h2>
+                <div class="icons">       
+                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
+                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                </div>  
+            </div>
+            <div class="chanel3">  
+                <h2>Chanel-3</h2>
+                <div class="icons">       
+                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
+                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                </div>  
+            </div>
+            <div class="chanel4">
+                <h2>Chanel-4</h2>
+                <div class="icons">       
+                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
+                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                </div>  
+            </div>
+        </div>
+        
+    </div>  
+
 </body>
 </html>
