--- a/LAB-03/index.html
+++ b/LAB-03/index.html
@@ -24,29 +24,29 @@
             <div class="chanel1">
                 <h2>Chanel-1</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                    <img src="./pictures/microphone.png" alt="record-button" id="record1">   
+                    <img src="./pictures/play-button.png" alt="play-button" id="play1">
                 </div>  
             </div>
             <div class="chanel2">
                 <h2>Chanel-2</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                    <img src="./pictures/microphone.png" alt="record-button" id="record2">   
+                    <img src="./pictures/play-button.png" alt="play-button" id="play2">
                 </div>  
             </div>
             <div class="chanel3">  
                 <h2>Chanel-3</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                    <img src="./pictures/microphone.png" alt="record-button" id="record3">   
+                    <img src="./pictures/play-button.png" alt="play-button" id="play3">
                 </div>  
             </div>
             <div class="chanel4">
                 <h2>Chanel-4</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record__button">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play__button">
+                    <img src="./pictures/microphone.png" alt="record-button" id="record4">   
+                    <img src="./pictures/play-button.png" alt="play-button" id="play4">
                 </div>  
             </div>
         </div>
