--- a/LAB-02/index.html
+++ b/LAB-02/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slider</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Slider</title>
 </head>
 <body>
-    <div id="slider">
+  <main class="container">
+      <button class="prev">Prev</button>
+      <div class="slider">
         <div class="slides">
-            <img src="https://picsum.photos/600/400?grayscale=2" alt="">
-        	<img src="https://picsum.photos/600/400?grayscale=2" alt="">
-        	<img src="https://picsum.photos/600/400?grayscale=2" alt="">
-        	<img src="https://picsum.photos/600/400?grayscale=2" alt="">
-        	<img src="https://picsum.photos/600/400?grayscale=2" alt="">
-        	<img src="https://picsum.photos/600/400?grayscale=2" alt="">
+
         </div>
-    </div>
-    <div id="next">
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-        <div class="dot"></div>
-    </div>
-    <script type="application/javascript" src="script.js"></script>
+      </div>
+      <button class="next">Next</button>
+  </main>
+  <script src="./script.js"></script>
 </body>
 </html>
