--- a/LAB-02/index.html
+++ b/LAB-02/index.html
@@ -14,9 +14,14 @@
         <div class="slides">
 
         </div>
+        <div class="buttons">
+          <div class="pause-btn">
+            <button class="pause">Pause</button>
+          </div>
+        </div>    
       </div>
       <button class="next">Next</button>
-  </main>
+    </main>
   <script src="./script.js"></script>
 </body>
 </html>
