--- a/LAB-03/index.html
+++ b/LAB-03/index.html
@@ -25,33 +25,33 @@
             <div class="chanel1">
                 <h2>Chanel-1</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record">   
-                    <img src="./pictures/stop.png" alt="record-button" class="stop">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play">
+                    <button class="record1"><img src="./pictures/microphone.png" alt="record-button" class="recordIcon"></button>   
+                    <button class="stop1"><img src="./pictures/stop.png" alt="record-button" class="stopIcon"></button>  
+                    <button class="play1"><img src="./pictures/play-button.png" alt="play-button" class="playIcon"></button>
                 </div>  
             </div>
             <div class="chanel2">
                 <h2>Chanel-2</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record">   
-                    <img src="./pictures/stop.png" alt="record-button" class="stop">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play">
+                    <button class="record1"><img src="./pictures/microphone.png" alt="record-button" class="recordIcon"></button>   
+                    <button class="stop1"><img src="./pictures/stop.png" alt="record-button" class="stopIcon"></button>  
+                    <button class="play1"><img src="./pictures/play-button.png" alt="play-button" class="playIcon"></button>
                 </div>  
             </div>
             <div class="chanel3">  
                 <h2>Chanel-3</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record">   
-                    <img src="./pictures/stop.png" alt="record-button" class="stop">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play">
+                    <button class="record1"><img src="./pictures/microphone.png" alt="record-button" class="recordIcon"></button>   
+                    <button class="stop1"><img src="./pictures/stop.png" alt="record-button" class="stopIcon"></button>  
+                    <button class="play1"><img src="./pictures/play-button.png" alt="play-button" class="playIcon"></button>
                 </div>  
             </div>
             <div class="chanel4">
                 <h2>Chanel-4</h2>
                 <div class="icons">       
-                    <img src="./pictures/microphone.png" alt="record-button" class="record">   
-                    <img src="./pictures/stop.png" alt="record-button" class="stop">   
-                    <img src="./pictures/play-button.png" alt="play-button" class="play">
+                    <button class="record1"><img src="./pictures/microphone.png" alt="record-button" class="recordIcon"></button>   
+                    <button class="stop1"><img src="./pictures/stop.png" alt="record-button" class="stopIcon"></button>  
+                    <button class="play1"><img src="./pictures/play-button.png" alt="play-button" class="playIcon"></button>
                 </div>  
             </div>
         </div>
