--- a/LAB-04/index.html
+++ b/LAB-04/index.html
@@ -7,9 +7,23 @@
     <title>NotePocket</title>
 </head>
 <body>
+    <div class="form">
+        <form id="add-form">
+            <input type="text" id = "title" placeholder="Tytuł" required>
+            <textarea id="content" placeholder="Treść"></textarea>
+            <select id="color" required>
+                <option value="">Wybierz kolor notatki...</option>
+                <option value="#43B9B3">Niebieski</option>
+                <option value="#B343B9">Fioletowy</option>
+                <option value="#B9B343">Żółty</option>
+            </select>
+            <label for="pin">Przypnij</label>
+            <input type="checkbox" id="pin">
+            <button id ="add">Add</button>
+        </form>
+    </div>
     <div class="notes">
     </div>
-    <button id ="add">Add</button>
     <script src="script.js"></script>
 </body>
 </html>
