add delete, and edit notes methods

--- a/LAB-04/index.html
+++ b/LAB-04/index.html
@@ -12,13 +12,15 @@
             <input type="text" id = "title" placeholder="Tytuł" required>
             <textarea id="content" placeholder="Treść"></textarea>
             <select id="color" required>
-                <option value="">Wybierz kolor notatki...</option>
-                <option value="#43B9B3">Niebieski</option>
-                <option value="#B343B9">Fioletowy</option>
-                <option value="#B9B343">Żółty</option>
+                <option value="">Select color...</option>
+                <option value="#43B9B3">Blue</option>
+                <option value="#B343B9">Violet</option>
+                <option value="#B9B343">Yellow</option>
             </select>
-            <label for="pin">Przypnij</label>
-            <input type="checkbox" id="pin">
+            <label for="pin">
+                Pin
+                <input type="checkbox" id="pin">
+            </label>     
             <button id ="add">Add</button>
         </form>
     </div>
