--- a/LAB-06/index.html
+++ b/LAB-06/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Canvas</title>
 </head>
 <body>
+    <div class="container">
+        <canvas id="canvas"></canvas>
+        <br>
+        <input type="range" id="numberOfBalls" min="1" max="100" step="1" value="10">
+        <label for="numberOfBalls">Liczba kulek:</label>
+        <output  id="numberOfBallsOutput"></output>
+        <br>
+        <input type="range" id="threshold" min="1" max="50" step="1" value="20">
+        <label for="threshold">Próg (%):</label>
+        <output id="thresholdOutput"></output>
+        <br>
+        <button id="startButton">Start</button>
+        <button id="resetButton">Reset</button>
+        <br>
+        <label id="fps"></label>
+    </div>
     <script src = "canvas.js"></script>
 </body>
 </html>
+
+<!-- Narysuj X kulek poruszających się w dowolnym kierunku z losową prędkością
+Jeśli odległość pomiędzy kulkami jest mniejsza niż Y rysuj pomiędzy nimi linię
+Kulki odbijają się od krawędzi strony
+Dodaj przyciski Start i Reset
+Zbadaj ile jesteś w stanie wyświetlić kulek (stabilne 60fps) przy założeniu Y = 20% szerokości ekranu
+X, Y jest definiowane przez użytkownika (pola tekstowe lub np. suwaki - wstępnie uzupełnione) -->
