--- a/LAB-07/index.html
+++ b/LAB-07/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <div class="container">
+        <header>
+            <h1>WeatherApp</h1>
+        </header>
         <form id="search">
             <input type="text" placeholder="Search city" id="searchCity">
             <button id="searchBtn">Search</button>
         </form>    
         <div class="wather-section">
-            <h1 class="city"></h1>
+            <h2 class="city">Nowy Targ</h2>
         </div>
     </div>
     <script src="./script.js"></script>
