add mote created date, fix problem with pin

--- a/LAB-04/index.html
+++ b/LAB-04/index.html
@@ -7,25 +7,27 @@
     <title>NotePocket</title>
 </head>
 <body>
-    <div class="form">
-        <form id="add-form">
-            <input type="text" id = "title" placeholder="Tytuł" required>
-            <textarea id="content" placeholder="Treść"></textarea>
-            <select id="color" required>
-                <option value="">Select color...</option>
-                <option value="#43B9B3">Blue</option>
-                <option value="#B343B9">Violet</option>
-                <option value="#B9B343">Yellow</option>
-            </select>
-            <label for="pin">
-                Pin
-                <input type="checkbox" id="pin">
-            </label>     
-            <button id ="add">Add</button>
-        </form>
-    </div>
-    <div class="notes">
-    </div>
+    <div class="container">
+        <header>NotePocket</header>
+        <div class="form">
+            <form id="add-form">
+                <input type="text" id = "title" placeholder="Tytuł" required>
+                <textarea id="content" placeholder="Treść"></textarea>
+                <select id="color" required>
+                    <option value="">Select color...</option>
+                    <option value="#43B9B3">Blue</option>
+                    <option value="#B343B9">Violet</option>
+                    <option value="#B9B343">Yellow</option>
+                </select>
+                <label for="pin">
+                    Pin
+                    <input type="checkbox" id="pin">
+                </label>     
+                <button id ="add">Add</button>
+            </form>
+        </div>
+        <div class="notes"></div>
+    </div>    
     <script src="script.js"></script>
 </body>
 </html>
