--- a/LAB-07/index.html
+++ b/LAB-07/index.html
@@ -17,7 +17,7 @@
             <button id="searchBtn">Search</button>
         </form>    
         <div class="wather-section">
-            <h2 class="city">Nowy Targ</h2>
+            <h2 class="city"></h2>
         </div>
     </div>
     <script src="./script.js"></script>
