--- a/LAB-07/index.html
+++ b/LAB-07/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>Weather App</title>
 </head>
 <body>
@@ -16,8 +19,8 @@
             <input type="text" placeholder="Search city" id="searchCity">
             <button id="searchBtn">Search</button>
         </form>    
-        <div class="wather-section">
-            <h2 class="city"></h2>
+        <div class="weather-content">
+
         </div>
     </div>
     <script src="./script.js"></script>
